configs/k8s/ride-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ride-service
  labels:
    app: ride-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ride-service
  template:
    metadata:
      labels:
        app: ride-service
    spec:
      containers:
      - name: ride-service
        image: us-central1-docker.pkg.dev/riderx-pilot/riderx-repo/ride-service:latest
        ports:
        - containerPort: 5002
        - containerPort: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: ride-service
spec:
  selector:
    app: ride-service
  ports:
  - name: http
    port: 5002
    targetPort: 5002
  - name: metrics
    port: 8002
    targetPort: 8002
  type: ClusterIP
